--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
     bot:
         environment:
         - NODE_ENV=production
-        - SERVER_PROTOCOL=http
+        - SERVER_PROTOCOL=https
         - SERVER_URL=server
         - SERVER_PORT=8080
 
