Default room + Multi nodes + Redis Database

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,5 +16,7 @@ services:
         environment:
         - NODE_ENV=production
         - PORT=8080
+        - REDIS_URL=redis
+        - REDIS_PORT=6379
         ports:
         - "8080:8080"
