--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
 		"watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\" \"npm run watch-public\""
 	},
 	"dependencies": {
+		"redis": "^2.8.0",
 		"serve-handler": "^6.1.1",
 		"socket.io": "^2.2.0",
 		"socket.io-redis": "^5.2.0",
@@ -33,6 +34,7 @@
 		"@types/express": "^4.17.1",
 		"@types/jest": "^24.0.18",
 		"@types/node": "^12.7.5",
+		"@types/redis": "^2.8.13",
 		"@types/serve-handler": "^6.1.0",
 		"@types/socket.io": "^2.1.2",
 		"@types/socket.io-redis": "^1.0.25",
